fix: adjust container padding for improved layout on mobile devices

--- a/css/templatestyles.css
+++ b/css/templatestyles.css
@@ -19,7 +19,7 @@ input,button,textarea,select{font:inherit;}p,h1,h2,h3,h4,h5,h6{overflow-wrap:bre
 
 
 @media (max-width:768px){
-    .container{width:100%;flex-direction:column;align-items:center;padding:15px; /* border: 1px solid rgb(238, 255, 0);background: yellow;*/ }
+    .container{width:100%;flex-direction:column;align-items:center;padding: 0 20px;  /*padding:15px;  border: 1px solid rgb(238, 255, 0);background: yellow;*/ }
     .content{margin-left:auto;}.contact-form{max-width:max-content;}}
 
 @media (min-width:576px){#nav-brand{width:529px;}.navbar-toggler{display:none;}.nav{height:auto;}.nav a{display:inline-block;}.big-image{margin-top:157px;}.dropdown-content{position:fixed;top:182px;width:260px;left:280px;}.dropdown-content.show{display:inline;}.overlay{padding:25px;}}
